# ragDMScopilot

./: .dockerignore  .env.example  .gitignore  ANSWER_GENERATION_IMPROVEMENTS.md  CODE_REVIEW.md  CODE_REVIEW_MAIN_BRANCH.md  Caddyfile  DEPLOY.md  Dockerfile  GCP_MIGRATION.md  IMPLEMENTATION_RECOMMENDATIONS.md  PRODUCT.md  RATING_SCORECARD.md  README.md  check_semantic_ranker.py  diagnosis.md  dlq-redrive.json  docker-compose.yml  fable_features.md  forme.md  frontend_design.md  gcp_setup.md  index.html  main.py  production_readiness_audit.md  project_structure.md  pyproject.toml  rdscon.py  requirements.txt  vm_setup.sh
config/: copilot_schema_catalog.example.json  copilot_schema_catalog.json
frontend/: package-lock.json  package.json  tsconfig.app.tsbuildinfo
frontend1/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontendkimchi/: .dockerignore  .eslintrc.cjs  Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.app.json  tsconfig.app.tsbuildinfo  vite.config.ts
scripts/: apply_obs_schema.py  compare_schema.py  confirm_match.py  create_operator.py  create_pinecone_index.py  diag_copilot.py  enqueue_pdf.py  find_copilot_sql.py  find_sql_logs.py  list_users.py  reset_password.py  seed_users.py  smoke_test_gcp.py  verify_login.py
src/: _smoke_analyze.py  _smoke_model.py  _smoke_schema.py
tests/: auth_doubles.py  conftest.py  observability_tracing_store_double.py  test_abstention.py  test_abstention_reason_code_property.py  test_abstention_response_shape_properties.py  test_ai_config.py  test_ai_config_change_validation_property.py  test_ai_config_endpoints.py  test_ai_config_immutability_history_property.py  test_ai_config_resolver.py  test_answer_path_integration.py  test_api_ingestion_queue.py  test_api_smoke.py  test_atomic_persistence_properties.py  test_attribute_scalar_properties.py  test_attribute_sentinels.py  test_auth_csrf.py  test_auth_dependencies.py  test_auth_models.py  test_auth_passwords.py  test_auth_rate_limit_lazy.py  test_auth_router.py  test_auth_schema.py  test_auth_service.py  test_auth_stores.py  test_auth_tokens.py  test_bounded_buffer_properties.py  test_bug_condition_exploration.py  test_chunking.py  test_claim_decomposition_failure.py  test_claim_evidence_serialization_roundtrip_property.py  test_claim_mapper.py  test_claim_structure_wellformed_property.py  test_claims_evidence_status.py  (+154 more)
(+373 files in other folders)
