[project]
name = "production-rag"
version = "0.1.0"
description = "Production RAG scaffold using LlamaParse, Pinecone, Bedrock Nemotron, and S3."
requires-python = ">=3.11"
dependencies = [
  "beautifulsoup4>=4.12.0",
  "boto3>=1.34.0",
  "fastapi>=0.111.0",
  "llama-cloud-services>=0.6.0",
  "llama-index-core>=0.12.0",
  "openpyxl>=3.1.0",

  "pinecone>=5.0.0",
  "pinecone-text>=0.9.0",
  "psycopg[binary]>=3.2.0",
  "pydantic>=2.7.0",
  "pydantic-settings>=2.3.0",
  "python-multipart>=0.0.9",
  "tenacity>=8.2.0",
  "uvicorn[standard]>=0.30.0",

]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "ruff>=0.5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/rag_system"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
