[project]
name = "production-rag"
version = "0.1.0"
description = "Production RAG scaffold using LlamaParse, Pinecone, Gemini, and GCS."
requires-python = ">=3.11"
dependencies = [
  "bcrypt>=4.1.0",
  "beautifulsoup4>=4.12.0",
  "fastapi>=0.111.0",
  "google-genai>=1.0.0",
  "google-cloud-storage>=2.16.0",
  "google-cloud-pubsub>=2.21.0",
  "llama-cloud-services>=0.6.0",
  "llama-index-core>=0.12.0",
  "openpyxl>=3.1.0",

  "pinecone>=5.0.0",
  "pinecone-text>=0.9.0",
  "psycopg[binary]>=3.2.0",
  "pydantic>=2.7.0",
  "pydantic-settings>=2.3.0",
  "pyjwt>=2.8.0",
  "python-multipart>=0.0.9",
  "sqlglot>=25.0.0",
  "tenacity>=8.2.0",
  "uvicorn[standard]>=0.30.0",

]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "pytest-asyncio>=0.24.0",
  "pytest-cov>=5.0.0",
  "hypothesis>=6.100.0",
  "ruff>=0.5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/rag_system"]

[tool.ruff]
line-length = 100
target-version = "py311"
# Lint application code only; steering/tooling, generated dirs, and ad-hoc
# developer smoke scripts (src/_smoke_*.py — not part of the rag_system package)
# are excluded.
extend-exclude = [".kiro", ".agents", "frontendkimchi", "src/_smoke_*.py"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "strict"
asyncio_default_fixture_loop_scope = "function"
